<resources>
    <string name="app_name">Matrimonial</string>

    <!--Login Screen-->
    <string name="login_user_hint">User ID</string>
    <string name="login_password_hint">Password</string>
    <string name="btn_login">Login</string>
    <string name="login_TC"><b>By clicking  \"Login\" you agree to the Terms and Conditions</b></string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_girls">Girls</string>
    <string name="nav_boys">Boys</string>
    <string name="nav_shortlist">Sortlist</string>
    <string name="nav_event">Events</string>
    <string name="nav_biodata">Send Bio-Data</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_aboutus">About us</string>
    <string name="nav_settings">Settings</string>
    <string name="search_girl_fragment">Name | Father Name | Surname </string>
    <string name="btn_details_pi">Personal Info</string>
    <string name="btn_details_ci">Contact Info</string>
    <string name="txt_bsic_info">Basic Info</string>
    <string name="txt_bi_dob">Birthdate</string>
    <string name="txt_bi_time">Time</string>
    <string name="txt_bi_birth_place">Birth Place</string>
    <string name="txt_bi_live_in">Live In</string>
    <string name="txt_bi_live_mother_name">Mother Name</string>
    <string name="txt_bi_live_father_name">Father Name</string>
    <string name="txt_educational_info">Educational Info</string>
    <string name="txt_ei_hsc">HSC</string>
    <string name="txt_ei_bachelors">Bachelors</string>
    <string name="txt_ei_master">Master</string>
    <string name="txt_ei_professional">Professional Courses</string>
    <string name="txt_contact_info">Conatct Info</string>
    <string name="txt_ci_phn1">Phone 1</string>
    <string name="txt_ci_phn2">Phone 2</string>
    <string name="txt_ci_email1">Email1</string>
    <string name="txt_ci_email2">Email2</string>
    <string name="txt_ci_address">Address</string>
    <string name="feedback_txt">Feedback message:</string>
    <string name="btn_feedback">Send</string>
    <string name="send_bio_data_txt">Generate Your Bio-Data to check Preview\n and send Email</string>
    <string name="biodata_generate_btn">Generate</string>
    <string name="biodata_send_btn">Send</string>
    <string name="search_boys_fragment">Name | Father Name | Surname</string>
    <string name="event_name">Event Name :</string>
    <string name="search_filter">Name | Father Name | Surname </string>
    <string name="filter_nationality">Nationality           :</string>
    <string name="filter_selectcity">Select City            :</string>
    <string name="filter_isManglik">is Manglik?         :</string>
    <string name="filter_height">Height           :</string>
    <string name="txt_Age_group">Age Group</string>
    <string name="age_group_txt">Select age group by Dragging below Dots</string>
    <string name="selected_age_group_txt">Selected age group :</string>
    <string name="txt_edu_filter">Education</string>
    <string name="filter_select_edu">Select Edu         :</string>
    <string name="txt_Caste_filter">Caste</string>
    <string name="filter_Caste"> Caste:</string>
    <string name="filter_sub_Caste">SubCaste       :</string>


    <string-array name="city_name">
        <item>Ahmedabad</item>
        <item>Vadodra</item>
        <item>Surat</item>
    </string-array>

    <string-array name="edu_filter">
        <item>Master</item>
        <item>Bachelor</item>
        <item>HSC</item>
        <item>SSC</item>
    </string-array>

    <string-array name="caste_filter">
        <item>Hindu</item>
        <item>Brahmin</item>
    </string-array>

    <string-array name="sub_caste_filter">
        <item>Sub_Hindu</item>
        <item>Sub_Brahmin</item>
    </string-array>

    <!-- Range Seek bar-->
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>

</resources>
