<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_girls"
            android:icon="@drawable/ic_girl"
            android:title="@string/nav_girls" />
        <item
            android:id="@+id/nav_boys"
            android:icon="@drawable/ic_boys"
            android:title="@string/nav_boys" />


        <item
            android:id="@+id/nav_sortlist"
            android:icon="@drawable/ic_sortlist"
            android:title="@string/nav_shortlist" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event"
            android:title="@string/nav_event" />
        <item
            android:id="@+id/nav_send_biodata"
            android:icon="@drawable/ic_sendbio_data"
            android:title="@string/nav_biodata" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/nav_feedback" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_aboutus" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>


</menu>
