<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            card_view:cardBackgroundColor="@color/bg_crad_grey"
            card_view:cardCornerRadius="7dp"
            card_view:cardElevation="3dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/layout_personal_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_info"
                        android:gravity="center"
                        android:text="@string/txt_bsic_info"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/layout_bi_divider" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/layout_bg_bi"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <com.techno.matrimonial.CustomUi.MyTitleTextView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_bi_dob" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/txts_details_divider" />

                    <TextView
                        android:id="@+id/tv_bi_dob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="02/12/1989 - 26 Years"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@color/layout_bg_bi"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <com.techno.matrimonial.CustomUi.MyTitleTextView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_bi_time" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/txts_details_divider" />

                    <TextView
                        android:id="@+id/tv_bi_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="10:45 AM"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@color/layout_bg_bi"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <com.techno.matrimonial.CustomUi.MyTitleTextView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_bi_birth_place" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/txts_details_divider" />

                    <TextView
                        android:id="@+id/tv_bi_bp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="Ahmedabad"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@color/layout_bg_bi"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <com.techno.matrimonial.CustomUi.MyTitleTextView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_bi_live_in" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/txts_details_divider" />

                    <TextView
                        android:id="@+id/tv_bi_li"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="Ahmedabad"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@color/layout_bg_bi"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <com.techno.matrimonial.CustomUi.MyTitleTextView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_bi_live_mother_name" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/txts_details_divider" />

                    <TextView
                        android:id="@+id/tv_bi_mother_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="Bhavnaben Shukla"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@color/layout_bg_bi"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <com.techno.matrimonial.CustomUi.MyTitleTextView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_bi_live_father_name" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/txts_details_divider" />

                    <TextView
                        android:id="@+id/tv_bi_father_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="Mayank Ramaniklal Shukla"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_educationinfo"
                        android:gravity="center"
                        android:text="@string/txt_educational_info"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/layout_bi_divider" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@color/layout_bg_bi"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <com.techno.matrimonial.CustomUi.MyTitleTextView
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_ei_hsc" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/txts_details_divider" />
                    <TextView
                        android:id="@+id/tv_ei_hsc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="Science"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@color/layout_bg_bi"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <com.techno.matrimonial.CustomUi.MyTitleTextView
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_ei_bachelors" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/txts_details_divider" />

                    <TextView
                        android:id="@+id/tv_ei_bachelors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="BSc"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@color/layout_bg_bi"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <com.techno.matrimonial.CustomUi.MyTitleTextView
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_ei_master" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/txts_details_divider" />

                    <TextView
                        android:id="@+id/tv_ei_master"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="MSc"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@color/layout_bg_bi"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <com.techno.matrimonial.CustomUi.MyTitleTextView
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_ei_professional" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/txts_details_divider" />

                    <TextView
                        android:id="@+id/tv_ei_professional"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text=""
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>