<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            card_view:cardBackgroundColor="@color/bg_crad_grey"
            card_view:cardCornerRadius="7dp"
            card_view:cardElevation="3dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/layout_personal_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_info"
                        android:gravity="center"
                        android:text="@string/txt_contact_info"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/layout_bi_divider" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/layout_bg_bi"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <com.techno.matrimonial.CustomUi.MyTitleTextView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/txt_ci_phn1" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/txts_details_divider" />

                    <TextView
                        android:id="@+id/tv_ci_phn1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:text="+91 9825098250"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         android:src="@drawable/ic_phone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@color/layout_bg_bi"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <com.techno.matrimonial.CustomUi.MyTitleTextView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/txt_ci_phn2" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/txts_details_divider" />

                    <TextView
                        android:id="@+id/tv_ci_phn2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:text="+91 9825498254"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_phone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@color/layout_bg_bi"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <com.techno.matrimonial.CustomUi.MyTitleTextView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/txt_ci_email1" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/txts_details_divider" />

                    <TextView
                        android:id="@+id/tv_ci_email1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="masandy1@gmail.com"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@color/layout_bg_bi"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <com.techno.matrimonial.CustomUi.MyTitleTextView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/txt_ci_email2" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/txts_details_divider" />

                    <TextView
                        android:id="@+id/tv_ci_email2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="masandy2@gmail.com"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@color/layout_bg_bi"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <com.techno.matrimonial.CustomUi.MyTitleTextView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/txt_ci_address" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/txts_details_divider" />

                    <TextView
                        android:id="@+id/tv_ci_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="B-102 Jigar App. Vadaj"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>